--- a/vezba_pupin/pocetna.html
+++ b/vezba_pupin/pocetna.html
@@ -15,7 +15,7 @@
 	</ul>
 
 <h1>Mihajlo Pupin</h1>
-<img src="C:\Users\Zoran\Desktop\Frontend JavaScript Development\HTML vezbe\vezba_pupin\slike\pupin.jpg">
+<img src="pupin.jpg">
 
 <p>Mihajlo Idvorski Pupin (Idvor, 9. oktobar 1854 — Njujork, 12. mart 1935) bio je srpski naučnik, pronalazač, profesor na Univerzitetu Kolumbija, nosilac jugoslovenskog odlikovanja Beli orao Prvog reda i počasni konzul Srbije u SAD. Bio je i jedan od osnivača i dugogodišnji predsednik Srpskog narodnog saveza u Americi. Takođe je dobio i Pulicerovu nagradu (1924) za autobiografsko delo "Od pašnjaka do naučenjaka" (engl. From immigrant to inventor).</p>
 
