--- a/vezba_pupin/zaduzbine.html
+++ b/vezba_pupin/zaduzbine.html
@@ -16,7 +16,7 @@
 	</ul>
 
 	<h1>Zadužbine Mihajla Pupina</h1>
-	<img src="C:\Users\Zoran\Desktop\Frontend JavaScript Development\HTML vezbe\vezba_pupin\slike\bista.jpg">
+	<img src="bista.jpg">
 
 <p>Pupin je 1914. oformio "Fond Pijade Aleksić-Pupin" pri SANU, u znak zahvalnosti majci Olimpijadi na podršci koju mu je tokom života pružala. Sredstva fonda su se koristila za pomaganje školovanja u staroj Srbiji i Makedoniji, a stipendije su dodeljivane jednom godišnje na praznik Sveti Sava. U znak zahvalnosti još 1930-ih godina jedna ulica u Ohridu dobila je ime Mihajlo Pupin.</p>
 
