--- a/index.html
+++ b/index.html
@@ -1,68 +1,99 @@
-
 <!DOCTYPE html>
-<html lang="en">
-
+<html>
 <head>
-    <meta charset="UTF-8">
-    <title>Advanced CSS - Assignment 1</title>
-    <style>
-        a[href^="https://www.google.com/"] {
-    color: green;
+	<title>CSS Animacija</title>
+	<meta charset="utf-8">
+
+	<style>
+body{
+	margin: 0px;
+	padding: 300px;
+	height: 100vh;
+	display: flex;
+	justify-content: center;
+	background: #050210;
 }
-a[href^="https://www.google.com/doodles"] {
-    color: green;
+.glow_krug{
+position: absolute;
+width: 100px;
+height: 100px;
+border-radius: 50%;
+background : linear-gradient(#fb5dad, #55fb9f, #b97aff);
+animation: animacija 0.5s linear infinite;
 }
-a[href^="https://www.link-group.eu/"] {
-    color: red;
+@keyframes animacija {
+	0%{
+		transform: rotate(0deg);
+	}
+	
+	100%{
+		transform: rotate(360deg);
+	}
+
 }
-#second-div > p:nth-child(2n+1) {
-    color: red;
+.glow_krug span{
+	position: absolute;
+	width: 100%;
+	height: 100%;
+	border-radius: 50%;
+    background : linear-gradient(#fb5dad, #55fb9f, #b97aff);
 }
-#second-div > p:nth-child(2n+2) {
-    color: blue;
+.glow_krug span:nth-child(1){
+    filter: blur(20px);
 }
-
-#first-div > p::after  {
-content: "- NEW";
-color: yellow;
+.glow_krug span:nth-child(2){
+    filter: blur(40px);
 }
-body > p:last-child:hover {
-
-    font-style: italic;
+.glow_krug:after{
+	content: '';
+	position: fixed;
+	top: 10px;
+	left: 10px;
+	right: 10px;
+	bottom: 10px;
+	background: #050210;
+	border-radius: 50px;
 }
+.sredina{
+	background: grey;
+	border-radius: 100%;
+	margin: 0px;
+	height: 70px;
+	width: 70px;
+	position: relative;
+	right: 0px;
+	bottom: 0px;
+	top: 13.5px;
+	left: 0px;
 
-
-
-
-
-
-
-
-    </style>
+	transform: scale(1);
+	animation: sredina 3s infinite;
+}
+@keyframes sredina{
+ 0%{
+transform: scale(0.1);
+box-shadow: 0 0 0 0 rgba(0, 0, 0, 0.7);
+ }
+  30%{
+transform: scale(0.5); 	
+box-shadow: 0 0 0 0 rgba(0, 0, 0, 0);
+ }
+  100%{
+ transform: scale(1);	
+ box-shadow: 0 0 0 0 rgba(0, 0, 0, 0);
+ }
+}
+	</style>
 
 </head>
-
 <body>
-    <h1>Main Heading</h1>
-    <p>Paragraph 1</p>
-    <a href="https://www.google.com/">Google</a>
-    <a href="https://www.google.com/doodles">Google Doodles</a>
-    <a href="https://www.link-group.eu/" target="_blank">Goto Link Group</a>
-    <div id="first-div">
-        <h2>Subheading</h2>
-        <p>Paragraph 2</p>
-        <p>Paragraph 3</p>
-        <div id="second-div">
-            <h3>Sub subheading</h3>
-            <p>Paragraph 4</p>
-            <p>Paragraph 5</p>
-            <p>Paragraph 6</p>
-            <p>Paragraph 7</p>
-            <p>Paragraph 8</p>
-        </div>
-    </div>
-    <p>Paragraph 9</p>
-    <p>Paragraph 10</p>
+<div class="glow_krug">
+	<span></span>
+	<span></span>
+	<span></span>
+	<span></span>
+	
+</div>
+<div class="sredina"></div>
 </body>
-
 </html>
